--- a/.tekton/odh-workbench-jupyter-tensorflow-cuda-py312-v3-0-push.yaml
+++ b/.tekton/odh-workbench-jupyter-tensorflow-cuda-py312-v3-0-push.yaml
@@ -1,6 +1,6 @@
 apiVersion: tekton.dev/v1
 kind: PipelineRun
-# retrigger Konflux builds to fix https://issues.redhat.com/browse/RHOAIENG-31914
+# retrigger to fix rhoai-3.0 codeflare update
 metadata:
   annotations:
     build.appstudio.openshift.io/repo: https://github.com/red-hat-data-services/notebooks?rev={{revision}}
